tests/core/snapshots/grpc-map.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server
  @upstream(batch: {delay: 10, headers: []}, httpCache: 42)
  @link(src: "config.yml", type: Config)
  @link(src: "map.proto", type: Protobuf) {
  query: Query
}

input map__MapRequest {
  map: JSON!
}

type Query {
  map__MapService__GetMap(mapRequest: map__MapRequest!): map__MapResponse!
    @grpc(url: "http://localhost:50051", body: "{{.args.mapRequest}}", method: "map.MapService.GetMap")
}

type map__MapResponse {
  map: JSON!
}
