tests/core/snapshots/grpc-oneof.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "oneof__OneOfService__GetOneOfVar3": {
        "usual": 5,
        "command": {
          "command": "end"
        }
      }
    }
  }
}
