tests/core/snapshots/grpc-proto-with-same-package.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foo": {
        "foo": "test-foo"
      },
      "bar": {
        "bar": "test-bar"
      }
    }
  }
}
