tests/core/snapshots/grpc-proto-with-same-package.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Bar {
  bar: String
}

type Foo {
  foo: String
}

type Query {
  bar: Bar!
  foo: Foo!
}

schema {
  query: Query
}
