tests/core/snapshots/grpc-reflection.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "news": {
        "news": [
          {
            "id": 1
          },
          {
            "id": 2
          }
        ]
      }
    }
  }
}
