tests/core/snapshots/http-select.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "userCompany": {
        "name": "FOO",
        "catchPhrase": "BAR"
      },
      "userDetails": {
        "city": "FIZZ"
      }
    }
  }
}
